# csound-vst3

CsoundVST3/: CMakeLists.txt  build_release_sign_install_local.sh  notarize_staged_artifacts.sh  notarytool-store-credentials.sh
CsoundVST3/Source/: PluginProcessor.cpp  PluginProcessor.h
